# tv-tracker

./: .eslintrc.json  Cargo.toml  build.rs  eslint.config.mjs  lint.sh  serve.py  shell.nix  snapshot.py
res/client/: add_items.html  add_items.js  add_shows.html  add_shows.js  calendar.html  calendar.js  episodes.html  episodes.js  http.js  index.css  index.html  index.js  links.html  links.js  movie.css  movie.html  movie.js  ratings.css  ratings.html  ratings.js  ratings_widget.js  show.css  show.html  show.js  show_card.js  shows.css  shows.html  shows.js  style.css  watch_list.html  watch_list.js
res/omdb/: f9_id_result.json  f9_search_result.json  matrix_id_result.json  matrix_search_result.json
res/tv_maze/: episodes_resident_alien.json  episodes_result.json  search_result.json  search_result_arcane.json
src/: app.rs  db.rs  image_cache.rs  indexer.rs  main.rs  omdb.rs  server.rs  tv_maze.rs  types.rs
