[package]
name = "tv-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
isahc = "1.7.2"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tide = "0.16.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tar = "0.4.39"
tempfile = "3.7.0"
chrono = "0.4.26"
urlencoding = "2.1.3"

[build-dependencies]
tar = "0.4.39"
